compilador.output
Estado 20 conflitos: 2 de deslocamento/redução
Estado 26 conflitos: 3 de deslocamento/redução
Estado 98 conflitos: 19 de redução/redução
Estado 135 conflitos: 3 de redução/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 bloco: parte_declara_rotulos parte_declara_vars parte_declara_subrotinas comando_composto

    4 $@2: %empty

    5 parte_declara_vars: $@2 VAR declara_vars
    6                   | %empty

    7 declara_vars: declara_vars declara_var
    8             | declara_var

    9 declara_var: secao_var PONTO_E_VIRGULA

   10 $@3: %empty

   11 secao_var: $@3 lista_id_var DOIS_PONTOS tipo

   12 tipo: IDENT

   13 lista_id_var: lista_id_var VIRGULA identificador
   14             | identificador

   15 identificador: IDENT

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 comando_composto: T_BEGIN comandos comando_end T_END
   19                 | T_BEGIN comando_end T_END

   20 comando_end: comando PONTO_E_VIRGULA
   21            | comando

   22 comandos: comandos comando PONTO_E_VIRGULA
   23         | comando PONTO_E_VIRGULA

   24 comando: rotulo comando_sem_rotulo

   25 comando_sem_rotulo: atribuicao
   26                   | desvio
   27                   | comando_composto
   28                   | condicional
   29                   | repetitivo
   30                   | chamada_subrotina
   31                   | leitura
   32                   | impressao

   33 atribuicao: variavel ATRIBUICAO expressao
   34           | variavel ATRIBUICAO constante

   35 expressao: expr_e relacao expr_e
   36          | expr_e

   37 relacao: MAIOR
   38        | MENOR
   39        | MAIOR_IGUAL
   40        | MENOR_IGUAL
   41        | IGUAL
   42        | DIFERENTE

   43 expr_e: expr_e MAIS expr_t
   44       | expr_e OR expr_t
   45       | expr_e MENOS expr_t
   46       | expr_t

   47 expr_t: expr_t VEZES expr_f
   48       | expr_t AND expr_f
   49       | expr_t DIVIDIDO expr_f
   50       | expr_f

   51 expr_f: ABRE_PARENTESES expressao FECHA_PARENTESES
   52       | constante
   53       | variavel
   54       | chamada_subrotina

   55 variavel: IDENT

   56 constante: NUMERO
   57          | TRUE
   58          | FALSE

   59 $@4: %empty

   60 $@5: %empty

   61 repetitivo: WHILE $@4 expressao DO $@5 comando_sem_rotulo

   62 $@6: %empty

   63 condicional: IF expressao THEN $@6 comando_sem_rotulo cond_else

   64 $@7: %empty

   65 cond_else: ELSE $@7 comando_sem_rotulo
   66          | %empty

   67 parte_declara_rotulos: LABEL rotulos PONTO_E_VIRGULA
   68                      | %empty

   69 rotulos: rotulos VIRGULA id_rotulo
   70        | id_rotulo

   71 id_rotulo: NUMERO

   72 $@8: %empty

   73 rotulo: NUMERO $@8 DOIS_PONTOS
   74       | %empty

   75 desvio: GOTO NUMERO

   76 parte_declara_subrotinas: parte_declara_subrotinas parte_declara_subrotina
   77                         | parte_declara_subrotina

   78 parte_declara_subrotina: declara_proc
   79                        | declara_func
   80                        | %empty

   81 $@9: %empty

   82 declara_proc: PROCEDURE $@9 declara_subrotina bloco_subrotina

   83 $@10: %empty

   84 declara_subrotina: IDENT $@10 param_formais

   85 bloco_subrotina: PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

   86 param_formais: ABRE_PARENTESES secoes_param_formais secao_params FECHA_PARENTESES
   87              | ABRE_PARENTESES secao_params FECHA_PARENTESES
   88              | %empty

   89 secoes_param_formais: secoes_param_formais secao_param_formais
   90                     | secao_param_formais

   91 secao_param_formais: secao_params PONTO_E_VIRGULA

   92 secao_params: var_subrotina secao_var

   93 var_subrotina: VAR
   94              | %empty

   95 $@11: %empty

   96 declara_func: FUNCTION $@11 declara_subrotina DOIS_PONTOS tipo_func bloco_subrotina

   97 tipo_func: IDENT

   98 $@12: %empty

   99 chamada_subrotina: variavel $@12 declara_params_reais

  100 leitura: READ declara_params

  101 impressao: WRITE declara_params

  102 declara_params_reais: declara_params
  103                     | %empty

  104 $@13: %empty

  105 declara_params: ABRE_PARENTESES $@13 param_reais FECHA_PARENTESES

  106 param_reais: param_reais VIRGULA expr_param
  107            | expr_param

  108 expr_param: expr_e


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 51 86 87 105
FECHA_PARENTESES (260) 2 51 86 87 105
VIRGULA (261) 13 16 69 106
PONTO_E_VIRGULA (262) 2 9 20 22 23 67 85 91
DOIS_PONTOS (263) 11 73 96
PONTO (264) 2
T_BEGIN (265) 18 19
T_END (266) 18 19
VAR (267) 5 93
IDENT (268) 2 12 15 16 17 55 84 97
ATRIBUICAO (269) 33 34
WHILE (270) 61
DO (271) 61
IF (272) 63
THEN (273) 63
ELSE (274) 65
MAIOR (275) 37
MENOR (276) 38
IGUAL (277) 41
DIFERENTE (278) 42
MAIOR_IGUAL (279) 39
MENOR_IGUAL (280) 40
PROCEDURE (281) 82
FUNCTION (282) 96
GOTO (283) 75
LABEL (284) 67
NUMERO (285) 56 71 73 75
READ (286) 100
WRITE (287) 101
MAIS (288) 43
MENOS (289) 45
VEZES (290) 47
DIVIDIDO (291) 49
OR (292) 44
AND (293) 48
TRUE (294) 57
FALSE (295) 58
LOWER_THAN_ELSE (296)


Não terminais com as regras onde eles aparecem

$accept (42)
    à esquerda: 0
programa (43)
    à esquerda: 2, à direita: 0
$@1 (44)
    à esquerda: 1, à direita: 2
bloco (45)
    à esquerda: 3, à direita: 2 85
parte_declara_vars (46)
    à esquerda: 5 6, à direita: 3
$@2 (47)
    à esquerda: 4, à direita: 5
declara_vars (48)
    à esquerda: 7 8, à direita: 5 7
declara_var (49)
    à esquerda: 9, à direita: 7 8
secao_var (50)
    à esquerda: 11, à direita: 9 92
$@3 (51)
    à esquerda: 10, à direita: 11
tipo (52)
    à esquerda: 12, à direita: 11
lista_id_var (53)
    à esquerda: 13 14, à direita: 11 13
identificador (54)
    à esquerda: 15, à direita: 13 14
lista_idents (55)
    à esquerda: 16 17, à direita: 2 16
comando_composto (56)
    à esquerda: 18 19, à direita: 3 27
comando_end (57)
    à esquerda: 20 21, à direita: 18 19
comandos (58)
    à esquerda: 22 23, à direita: 18 22
comando (59)
    à esquerda: 24, à direita: 20 21 22 23
comando_sem_rotulo (60)
    à esquerda: 25 26 27 28 29 30 31 32, à direita: 24 61 63 65
atribuicao (61)
    à esquerda: 33 34, à direita: 25
expressao (62)
    à esquerda: 35 36, à direita: 33 51 61 63
relacao (63)
    à esquerda: 37 38 39 40 41 42, à direita: 35
expr_e (64)
    à esquerda: 43 44 45 46, à direita: 35 36 43 44 45 108
expr_t (65)
    à esquerda: 47 48 49 50, à direita: 43 44 45 46 47 48 49
expr_f (66)
    à esquerda: 51 52 53 54, à direita: 47 48 49 50
variavel (67)
    à esquerda: 55, à direita: 33 34 53 99
constante (68)
    à esquerda: 56 57 58, à direita: 34 52
repetitivo (69)
    à esquerda: 61, à direita: 29
$@4 (70)
    à esquerda: 59, à direita: 61
$@5 (71)
    à esquerda: 60, à direita: 61
condicional (72)
    à esquerda: 63, à direita: 28
$@6 (73)
    à esquerda: 62, à direita: 63
cond_else (74)
    à esquerda: 65 66, à direita: 63
$@7 (75)
    à esquerda: 64, à direita: 65
parte_declara_rotulos (76)
    à esquerda: 67 68, à direita: 3
rotulos (77)
    à esquerda: 69 70, à direita: 67 69
id_rotulo (78)
    à esquerda: 71, à direita: 69 70
rotulo (79)
    à esquerda: 73 74, à direita: 24
$@8 (80)
    à esquerda: 72, à direita: 73
desvio (81)
    à esquerda: 75, à direita: 26
parte_declara_subrotinas (82)
    à esquerda: 76 77, à direita: 3 76
parte_declara_subrotina (83)
    à esquerda: 78 79 80, à direita: 76 77
declara_proc (84)
    à esquerda: 82, à direita: 78
$@9 (85)
    à esquerda: 81, à direita: 82
declara_subrotina (86)
    à esquerda: 84, à direita: 82 96
$@10 (87)
    à esquerda: 83, à direita: 84
bloco_subrotina (88)
    à esquerda: 85, à direita: 82 96
param_formais (89)
    à esquerda: 86 87 88, à direita: 84
secoes_param_formais (90)
    à esquerda: 89 90, à direita: 86 89
secao_param_formais (91)
    à esquerda: 91, à direita: 89 90
secao_params (92)
    à esquerda: 92, à direita: 86 87 91
var_subrotina (93)
    à esquerda: 93 94, à direita: 92
declara_func (94)
    à esquerda: 96, à direita: 79
$@11 (95)
    à esquerda: 95, à direita: 96
tipo_func (96)
    à esquerda: 97, à direita: 96
chamada_subrotina (97)
    à esquerda: 99, à direita: 30 54
$@12 (98)
    à esquerda: 98, à direita: 99
leitura (99)
    à esquerda: 100, à direita: 31
impressao (100)
    à esquerda: 101, à direita: 32
declara_params_reais (101)
    à esquerda: 102 103, à direita: 99
declara_params (102)
    à esquerda: 105, à direita: 100 101 102
$@13 (103)
    à esquerda: 104, à direita: 105
param_reais (104)
    à esquerda: 106 107, à direita: 105 106
expr_param (105)
    à esquerda: 108, à direita: 106 107


Estado 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end .

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   17 lista_idents: IDENT .

    $padrão  reduzir usando a regra 17 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   16 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 68 (parte_declara_rotulos)

    bloco                  ir ao estado 14
    parte_declara_rotulos  ir ao estado 15


Estado 12

   16 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 16 (lista_idents)


Estado 13

   67 parte_declara_rotulos: LABEL . rotulos PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 16

    rotulos    ir ao estado 17
    id_rotulo  ir ao estado 18


Estado 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 19


Estado 15

    3 bloco: parte_declara_rotulos . parte_declara_vars parte_declara_subrotinas comando_composto

    VAR       reduzir usando a regra 4 ($@2)
    $padrão  reduzir usando a regra 6 (parte_declara_vars)

    parte_declara_vars  ir ao estado 20
    $@2                 ir ao estado 21


Estado 16

   71 id_rotulo: NUMERO .

    $padrão  reduzir usando a regra 71 (id_rotulo)


Estado 17

   67 parte_declara_rotulos: LABEL rotulos . PONTO_E_VIRGULA
   69 rotulos: rotulos . VIRGULA id_rotulo

    VIRGULA          deslocar, e ir ao estado 22
    PONTO_E_VIRGULA  deslocar, e ir ao estado 23


Estado 18

   70 rotulos: id_rotulo .

    $padrão  reduzir usando a regra 70 (rotulos)


Estado 19

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


Estado 20

    3 bloco: parte_declara_rotulos parte_declara_vars . parte_declara_subrotinas comando_composto

    PROCEDURE  deslocar, e ir ao estado 24
    FUNCTION   deslocar, e ir ao estado 25

    PROCEDURE  [reduzir usando a regra 80 (parte_declara_subrotina)]
    FUNCTION   [reduzir usando a regra 80 (parte_declara_subrotina)]
    $padrão   reduzir usando a regra 80 (parte_declara_subrotina)

    parte_declara_subrotinas  ir ao estado 26
    parte_declara_subrotina   ir ao estado 27
    declara_proc              ir ao estado 28
    declara_func              ir ao estado 29


Estado 21

    5 parte_declara_vars: $@2 . VAR declara_vars

    VAR  deslocar, e ir ao estado 30


Estado 22

   69 rotulos: rotulos VIRGULA . id_rotulo

    NUMERO  deslocar, e ir ao estado 16

    id_rotulo  ir ao estado 31


Estado 23

   67 parte_declara_rotulos: LABEL rotulos PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 67 (parte_declara_rotulos)


Estado 24

   82 declara_proc: PROCEDURE . $@9 declara_subrotina bloco_subrotina

    $padrão  reduzir usando a regra 81 ($@9)

    $@9  ir ao estado 32


Estado 25

   96 declara_func: FUNCTION . $@11 declara_subrotina DOIS_PONTOS tipo_func bloco_subrotina

    $padrão  reduzir usando a regra 95 ($@11)

    $@11  ir ao estado 33


Estado 26

    3 bloco: parte_declara_rotulos parte_declara_vars parte_declara_subrotinas . comando_composto
   76 parte_declara_subrotinas: parte_declara_subrotinas . parte_declara_subrotina

    T_BEGIN    deslocar, e ir ao estado 34
    PROCEDURE  deslocar, e ir ao estado 24
    FUNCTION   deslocar, e ir ao estado 25

    T_BEGIN    [reduzir usando a regra 80 (parte_declara_subrotina)]
    PROCEDURE  [reduzir usando a regra 80 (parte_declara_subrotina)]
    FUNCTION   [reduzir usando a regra 80 (parte_declara_subrotina)]

    comando_composto         ir ao estado 35
    parte_declara_subrotina  ir ao estado 36
    declara_proc             ir ao estado 28
    declara_func             ir ao estado 29


Estado 27

   77 parte_declara_subrotinas: parte_declara_subrotina .

    $padrão  reduzir usando a regra 77 (parte_declara_subrotinas)


Estado 28

   78 parte_declara_subrotina: declara_proc .

    $padrão  reduzir usando a regra 78 (parte_declara_subrotina)


Estado 29

   79 parte_declara_subrotina: declara_func .

    $padrão  reduzir usando a regra 79 (parte_declara_subrotina)


Estado 30

    5 parte_declara_vars: $@2 VAR . declara_vars

    $padrão  reduzir usando a regra 10 ($@3)

    declara_vars  ir ao estado 37
    declara_var   ir ao estado 38
    secao_var     ir ao estado 39
    $@3           ir ao estado 40


Estado 31

   69 rotulos: rotulos VIRGULA id_rotulo .

    $padrão  reduzir usando a regra 69 (rotulos)


Estado 32

   82 declara_proc: PROCEDURE $@9 . declara_subrotina bloco_subrotina

    IDENT  deslocar, e ir ao estado 41

    declara_subrotina  ir ao estado 42


Estado 33

   96 declara_func: FUNCTION $@11 . declara_subrotina DOIS_PONTOS tipo_func bloco_subrotina

    IDENT  deslocar, e ir ao estado 41

    declara_subrotina  ir ao estado 43


Estado 34

   18 comando_composto: T_BEGIN . comandos comando_end T_END
   19                 | T_BEGIN . comando_end T_END

    NUMERO  deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 74 (rotulo)

    comando_end  ir ao estado 45
    comandos     ir ao estado 46
    comando      ir ao estado 47
    rotulo       ir ao estado 48


Estado 35

    3 bloco: parte_declara_rotulos parte_declara_vars parte_declara_subrotinas comando_composto .

    $padrão  reduzir usando a regra 3 (bloco)


Estado 36

   76 parte_declara_subrotinas: parte_declara_subrotinas parte_declara_subrotina .

    $padrão  reduzir usando a regra 76 (parte_declara_subrotinas)


Estado 37

    5 parte_declara_vars: $@2 VAR declara_vars .
    7 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 10 ($@3)
    $padrão  reduzir usando a regra 5 (parte_declara_vars)

    declara_var  ir ao estado 49
    secao_var    ir ao estado 39
    $@3          ir ao estado 40


Estado 38

    8 declara_vars: declara_var .

    $padrão  reduzir usando a regra 8 (declara_vars)


Estado 39

    9 declara_var: secao_var . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 50


Estado 40

   11 secao_var: $@3 . lista_id_var DOIS_PONTOS tipo

    IDENT  deslocar, e ir ao estado 51

    lista_id_var   ir ao estado 52
    identificador  ir ao estado 53


Estado 41

   84 declara_subrotina: IDENT . $@10 param_formais

    $padrão  reduzir usando a regra 83 ($@10)

    $@10  ir ao estado 54


Estado 42

   82 declara_proc: PROCEDURE $@9 declara_subrotina . bloco_subrotina

    PONTO_E_VIRGULA  deslocar, e ir ao estado 55

    bloco_subrotina  ir ao estado 56


Estado 43

   96 declara_func: FUNCTION $@11 declara_subrotina . DOIS_PONTOS tipo_func bloco_subrotina

    DOIS_PONTOS  deslocar, e ir ao estado 57


Estado 44

   73 rotulo: NUMERO . $@8 DOIS_PONTOS

    $padrão  reduzir usando a regra 72 ($@8)

    $@8  ir ao estado 58


Estado 45

   19 comando_composto: T_BEGIN comando_end . T_END

    T_END  deslocar, e ir ao estado 59


Estado 46

   18 comando_composto: T_BEGIN comandos . comando_end T_END
   22 comandos: comandos . comando PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 74 (rotulo)

    comando_end  ir ao estado 60
    comando      ir ao estado 61
    rotulo       ir ao estado 48


Estado 47

   20 comando_end: comando . PONTO_E_VIRGULA
   21            | comando .
   23 comandos: comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 21 (comando_end)


Estado 48

   24 comando: rotulo . comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 34
    IDENT    deslocar, e ir ao estado 63
    WHILE    deslocar, e ir ao estado 64
    IF       deslocar, e ir ao estado 65
    GOTO     deslocar, e ir ao estado 66
    READ     deslocar, e ir ao estado 67
    WRITE    deslocar, e ir ao estado 68

    comando_composto    ir ao estado 69
    comando_sem_rotulo  ir ao estado 70
    atribuicao          ir ao estado 71
    variavel            ir ao estado 72
    repetitivo          ir ao estado 73
    condicional         ir ao estado 74
    desvio              ir ao estado 75
    chamada_subrotina   ir ao estado 76
    leitura             ir ao estado 77
    impressao           ir ao estado 78


Estado 49

    7 declara_vars: declara_vars declara_var .

    $padrão  reduzir usando a regra 7 (declara_vars)


Estado 50

    9 declara_var: secao_var PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 9 (declara_var)


Estado 51

   15 identificador: IDENT .

    $padrão  reduzir usando a regra 15 (identificador)


Estado 52

   11 secao_var: $@3 lista_id_var . DOIS_PONTOS tipo
   13 lista_id_var: lista_id_var . VIRGULA identificador

    VIRGULA      deslocar, e ir ao estado 79
    DOIS_PONTOS  deslocar, e ir ao estado 80


Estado 53

   14 lista_id_var: identificador .

    $padrão  reduzir usando a regra 14 (lista_id_var)


Estado 54

   84 declara_subrotina: IDENT $@10 . param_formais

    ABRE_PARENTESES  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 88 (param_formais)

    param_formais  ir ao estado 82


Estado 55

   85 bloco_subrotina: PONTO_E_VIRGULA . bloco PONTO_E_VIRGULA

    LABEL  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 68 (parte_declara_rotulos)

    bloco                  ir ao estado 83
    parte_declara_rotulos  ir ao estado 15


Estado 56

   82 declara_proc: PROCEDURE $@9 declara_subrotina bloco_subrotina .

    $padrão  reduzir usando a regra 82 (declara_proc)


Estado 57

   96 declara_func: FUNCTION $@11 declara_subrotina DOIS_PONTOS . tipo_func bloco_subrotina

    IDENT  deslocar, e ir ao estado 84

    tipo_func  ir ao estado 85


Estado 58

   73 rotulo: NUMERO $@8 . DOIS_PONTOS

    DOIS_PONTOS  deslocar, e ir ao estado 86


Estado 59

   19 comando_composto: T_BEGIN comando_end T_END .

    $padrão  reduzir usando a regra 19 (comando_composto)


Estado 60

   18 comando_composto: T_BEGIN comandos comando_end . T_END

    T_END  deslocar, e ir ao estado 87


Estado 61

   20 comando_end: comando . PONTO_E_VIRGULA
   21            | comando .
   22 comandos: comandos comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 21 (comando_end)


Estado 62

   20 comando_end: comando PONTO_E_VIRGULA .
   23 comandos: comando PONTO_E_VIRGULA .

    T_END     reduzir usando a regra 20 (comando_end)
    $padrão  reduzir usando a regra 23 (comandos)


Estado 63

   55 variavel: IDENT .

    $padrão  reduzir usando a regra 55 (variavel)


Estado 64

   61 repetitivo: WHILE . $@4 expressao DO $@5 comando_sem_rotulo

    $padrão  reduzir usando a regra 59 ($@4)

    $@4  ir ao estado 89


Estado 65

   63 condicional: IF . expressao THEN $@6 comando_sem_rotulo cond_else

    ABRE_PARENTESES  deslocar, e ir ao estado 90
    IDENT            deslocar, e ir ao estado 63
    NUMERO           deslocar, e ir ao estado 91
    TRUE             deslocar, e ir ao estado 92
    FALSE            deslocar, e ir ao estado 93

    expressao          ir ao estado 94
    expr_e             ir ao estado 95
    expr_t             ir ao estado 96
    expr_f             ir ao estado 97
    variavel           ir ao estado 98
    constante          ir ao estado 99
    chamada_subrotina  ir ao estado 100


Estado 66

   75 desvio: GOTO . NUMERO

    NUMERO  deslocar, e ir ao estado 101


Estado 67

  100 leitura: READ . declara_params

    ABRE_PARENTESES  deslocar, e ir ao estado 102

    declara_params  ir ao estado 103


Estado 68

  101 impressao: WRITE . declara_params

    ABRE_PARENTESES  deslocar, e ir ao estado 102

    declara_params  ir ao estado 104


Estado 69

   27 comando_sem_rotulo: comando_composto .

    $padrão  reduzir usando a regra 27 (comando_sem_rotulo)


Estado 70

   24 comando: rotulo comando_sem_rotulo .

    $padrão  reduzir usando a regra 24 (comando)


Estado 71

   25 comando_sem_rotulo: atribuicao .

    $padrão  reduzir usando a regra 25 (comando_sem_rotulo)


Estado 72

   33 atribuicao: variavel . ATRIBUICAO expressao
   34           | variavel . ATRIBUICAO constante
   99 chamada_subrotina: variavel . $@12 declara_params_reais

    ATRIBUICAO  deslocar, e ir ao estado 105

    $padrão  reduzir usando a regra 98 ($@12)

    $@12  ir ao estado 106


Estado 73

   29 comando_sem_rotulo: repetitivo .

    $padrão  reduzir usando a regra 29 (comando_sem_rotulo)


Estado 74

   28 comando_sem_rotulo: condicional .

    $padrão  reduzir usando a regra 28 (comando_sem_rotulo)


Estado 75

   26 comando_sem_rotulo: desvio .

    $padrão  reduzir usando a regra 26 (comando_sem_rotulo)


Estado 76

   30 comando_sem_rotulo: chamada_subrotina .

    $padrão  reduzir usando a regra 30 (comando_sem_rotulo)


Estado 77

   31 comando_sem_rotulo: leitura .

    $padrão  reduzir usando a regra 31 (comando_sem_rotulo)


Estado 78

   32 comando_sem_rotulo: impressao .

    $padrão  reduzir usando a regra 32 (comando_sem_rotulo)


Estado 79

   13 lista_id_var: lista_id_var VIRGULA . identificador

    IDENT  deslocar, e ir ao estado 51

    identificador  ir ao estado 107


Estado 80

   11 secao_var: $@3 lista_id_var DOIS_PONTOS . tipo

    IDENT  deslocar, e ir ao estado 108

    tipo  ir ao estado 109


Estado 81

   86 param_formais: ABRE_PARENTESES . secoes_param_formais secao_params FECHA_PARENTESES
   87              | ABRE_PARENTESES . secao_params FECHA_PARENTESES

    VAR  deslocar, e ir ao estado 110

    $padrão  reduzir usando a regra 94 (var_subrotina)

    secoes_param_formais  ir ao estado 111
    secao_param_formais   ir ao estado 112
    secao_params          ir ao estado 113
    var_subrotina         ir ao estado 114


Estado 82

   84 declara_subrotina: IDENT $@10 param_formais .

    $padrão  reduzir usando a regra 84 (declara_subrotina)


Estado 83

   85 bloco_subrotina: PONTO_E_VIRGULA bloco . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 115


Estado 84

   97 tipo_func: IDENT .

    $padrão  reduzir usando a regra 97 (tipo_func)


Estado 85

   96 declara_func: FUNCTION $@11 declara_subrotina DOIS_PONTOS tipo_func . bloco_subrotina

    PONTO_E_VIRGULA  deslocar, e ir ao estado 55

    bloco_subrotina  ir ao estado 116


Estado 86

   73 rotulo: NUMERO $@8 DOIS_PONTOS .

    $padrão  reduzir usando a regra 73 (rotulo)


Estado 87

   18 comando_composto: T_BEGIN comandos comando_end T_END .

    $padrão  reduzir usando a regra 18 (comando_composto)


Estado 88

   20 comando_end: comando PONTO_E_VIRGULA .
   22 comandos: comandos comando PONTO_E_VIRGULA .

    T_END     reduzir usando a regra 20 (comando_end)
    $padrão  reduzir usando a regra 22 (comandos)


Estado 89

   61 repetitivo: WHILE $@4 . expressao DO $@5 comando_sem_rotulo

    ABRE_PARENTESES  deslocar, e ir ao estado 90
    IDENT            deslocar, e ir ao estado 63
    NUMERO           deslocar, e ir ao estado 91
    TRUE             deslocar, e ir ao estado 92
    FALSE            deslocar, e ir ao estado 93

    expressao          ir ao estado 117
    expr_e             ir ao estado 95
    expr_t             ir ao estado 96
    expr_f             ir ao estado 97
    variavel           ir ao estado 98
    constante          ir ao estado 99
    chamada_subrotina  ir ao estado 100


Estado 90

   51 expr_f: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 90
    IDENT            deslocar, e ir ao estado 63
    NUMERO           deslocar, e ir ao estado 91
    TRUE             deslocar, e ir ao estado 92
    FALSE            deslocar, e ir ao estado 93

    expressao          ir ao estado 118
    expr_e             ir ao estado 95
    expr_t             ir ao estado 96
    expr_f             ir ao estado 97
    variavel           ir ao estado 98
    constante          ir ao estado 99
    chamada_subrotina  ir ao estado 100


Estado 91

   56 constante: NUMERO .

    $padrão  reduzir usando a regra 56 (constante)


Estado 92

   57 constante: TRUE .

    $padrão  reduzir usando a regra 57 (constante)


Estado 93

   58 constante: FALSE .

    $padrão  reduzir usando a regra 58 (constante)


Estado 94

   63 condicional: IF expressao . THEN $@6 comando_sem_rotulo cond_else

    THEN  deslocar, e ir ao estado 119


Estado 95

   35 expressao: expr_e . relacao expr_e
   36          | expr_e .
   43 expr_e: expr_e . MAIS expr_t
   44       | expr_e . OR expr_t
   45       | expr_e . MENOS expr_t

    MAIOR        deslocar, e ir ao estado 120
    MENOR        deslocar, e ir ao estado 121
    IGUAL        deslocar, e ir ao estado 122
    DIFERENTE    deslocar, e ir ao estado 123
    MAIOR_IGUAL  deslocar, e ir ao estado 124
    MENOR_IGUAL  deslocar, e ir ao estado 125
    MAIS         deslocar, e ir ao estado 126
    MENOS        deslocar, e ir ao estado 127
    OR           deslocar, e ir ao estado 128

    $padrão  reduzir usando a regra 36 (expressao)

    relacao  ir ao estado 129


Estado 96

   46 expr_e: expr_t .
   47 expr_t: expr_t . VEZES expr_f
   48       | expr_t . AND expr_f
   49       | expr_t . DIVIDIDO expr_f

    VEZES     deslocar, e ir ao estado 130
    DIVIDIDO  deslocar, e ir ao estado 131
    AND       deslocar, e ir ao estado 132

    $padrão  reduzir usando a regra 46 (expr_e)


Estado 97

   50 expr_t: expr_f .

    $padrão  reduzir usando a regra 50 (expr_t)


Estado 98

   53 expr_f: variavel .
   99 chamada_subrotina: variavel . $@12 declara_params_reais

    ABRE_PARENTESES   reduzir usando a regra 98 ($@12)
    FECHA_PARENTESES  reduzir usando a regra 53 (expr_f)
    FECHA_PARENTESES  [reduzir usando a regra 98 ($@12)]
    VIRGULA           reduzir usando a regra 53 (expr_f)
    VIRGULA           [reduzir usando a regra 98 ($@12)]
    PONTO_E_VIRGULA   reduzir usando a regra 53 (expr_f)
    PONTO_E_VIRGULA   [reduzir usando a regra 98 ($@12)]
    T_END             reduzir usando a regra 53 (expr_f)
    T_END             [reduzir usando a regra 98 ($@12)]
    DO                reduzir usando a regra 53 (expr_f)
    DO                [reduzir usando a regra 98 ($@12)]
    THEN              reduzir usando a regra 53 (expr_f)
    THEN              [reduzir usando a regra 98 ($@12)]
    ELSE              reduzir usando a regra 53 (expr_f)
    ELSE              [reduzir usando a regra 98 ($@12)]
    MAIOR             reduzir usando a regra 53 (expr_f)
    MAIOR             [reduzir usando a regra 98 ($@12)]
    MENOR             reduzir usando a regra 53 (expr_f)
    MENOR             [reduzir usando a regra 98 ($@12)]
    IGUAL             reduzir usando a regra 53 (expr_f)
    IGUAL             [reduzir usando a regra 98 ($@12)]
    DIFERENTE         reduzir usando a regra 53 (expr_f)
    DIFERENTE         [reduzir usando a regra 98 ($@12)]
    MAIOR_IGUAL       reduzir usando a regra 53 (expr_f)
    MAIOR_IGUAL       [reduzir usando a regra 98 ($@12)]
    MENOR_IGUAL       reduzir usando a regra 53 (expr_f)
    MENOR_IGUAL       [reduzir usando a regra 98 ($@12)]
    MAIS              reduzir usando a regra 53 (expr_f)
    MAIS              [reduzir usando a regra 98 ($@12)]
    MENOS             reduzir usando a regra 53 (expr_f)
    MENOS             [reduzir usando a regra 98 ($@12)]
    VEZES             reduzir usando a regra 53 (expr_f)
    VEZES             [reduzir usando a regra 98 ($@12)]
    DIVIDIDO          reduzir usando a regra 53 (expr_f)
    DIVIDIDO          [reduzir usando a regra 98 ($@12)]
    OR                reduzir usando a regra 53 (expr_f)
    OR                [reduzir usando a regra 98 ($@12)]
    AND               reduzir usando a regra 53 (expr_f)
    AND               [reduzir usando a regra 98 ($@12)]
    $padrão          reduzir usando a regra 53 (expr_f)

    $@12  ir ao estado 106


Estado 99

   52 expr_f: constante .
